--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,7 @@ galaxy_info:
         - focal
     - name: Debian
       versions:
+        - jessie
         - stretch
         - buster
     - name: EL
